work in top movies & videosection

--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -8,7 +8,7 @@ $margin:20px;
 $date-color:#9e9898;
 $white:white;
 $indexmargin:82px;
-$indexsize: 20px;
+$breadcrumbsize: 22px;
 $bold:bold;
 $orange:#f56a18;
 $vipbgcolor:#a964a9;
